--- a/zoneless-calculator/src/app/calculator/components/calculator-btn/calculator-btn.component.html
+++ b/zoneless-calculator/src/app/calculator/components/calculator-btn/calculator-btn.component.html
@@ -1,3 +1,8 @@
-<button [class.is-command]="isCommand()">
+<button
+  [class.is-command]="isCommand()"
+  [class.is-press]="isPressed()"
+  (click)="handleClick()"
+  #btn
+>
   <ng-content />
 </button>
