Implement calculator service and update component for improved functionality

--- a/zoneless-calculator/src/app/calculator/components/calculator/calculator.component.html
+++ b/zoneless-calculator/src/app/calculator/components/calculator/calculator.component.html
@@ -3,39 +3,48 @@
   style="max-width: 300px"
 >
   <div class="w-full py-5 px-6 text-6xl text-white font-thin">
-    <span class="text-4xl"> 50 + </span>
+    @if( subResultText() !== '0' ) {
+    <span class="text-4xl"> {{ subResultText() }} {{ lastOperator() }} </span>
     <br />
-    <span>340.0</span>
+    }
+
+    <span>{{ resultText() }}</span>
   </div>
 </div>
 <div class="w-full bg-gradient-to-b from-indigo-400 to-indigo-500">
   <div class="flex w-full">
     <calculator-btn (onClick)="handleClick($event)"> C </calculator-btn>
-    <calculator-btn> +/- </calculator-btn>
-    <calculator-btn> % </calculator-btn>
-    <calculator-btn isCommand> ÷ </calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)"> +/- </calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)"> % </calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)" isCommand>
+      ÷
+    </calculator-btn>
+  </div>
+
+  <div class="flex w-full">
+    <calculator-btn (onClick)="handleClick($event)">7</calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)">8</calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)">9</calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)" isCommand>x</calculator-btn>
   </div>
   <div class="flex w-full">
-    <calculator-btn> 7 </calculator-btn>
-    <calculator-btn> 8 </calculator-btn>
-    <calculator-btn> 9 </calculator-btn>
-    <calculator-btn isCommand> x </calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)">4</calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)">5</calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)">6</calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)" isCommand>-</calculator-btn>
   </div>
   <div class="flex w-full">
-    <calculator-btn> 4 </calculator-btn>
-    <calculator-btn> 5 </calculator-btn>
-    <calculator-btn> 6 </calculator-btn>
-    <calculator-btn isCommand> - </calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)">1</calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)">2</calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)">3</calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)" isCommand>+</calculator-btn>
   </div>
   <div class="flex w-full">
-    <calculator-btn> 1 </calculator-btn>
-    <calculator-btn> 2 </calculator-btn>
-    <calculator-btn> 3 </calculator-btn>
-    <calculator-btn isCommand> + </calculator-btn>
-  </div>
-  <div class="flex w-full">
-    <calculator-btn> 0 </calculator-btn>
-    <calculator-btn> . </calculator-btn>
-    <calculator-btn isCommand isDoubleSize> = </calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)">0</calculator-btn>
+    <calculator-btn (onClick)="handleClick($event)">.</calculator-btn>
+
+    <calculator-btn (onClick)="handleClick($event)" isCommand isDoubleSize>
+      =
+    </calculator-btn>
   </div>
 </div>
