--- a/pokemon-ssr/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/pokemon-ssr/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -4,7 +4,13 @@
   <a
     class="hover:underline"
     routerLinkActive="text-blue-500 underline"
-    [routerLink]="['/about']"
+    routerLink="/pokemons"
+    >Pokémons</a
+  >
+  <a
+    class="hover:underline"
+    routerLinkActive="text-blue-500 underline"
+    routerLink="/about"
     >About</a
   >
   <a
