--- a/pokemon-ssr/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/pokemon-ssr/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -2,27 +2,11 @@
   class="text-white gap-4 top-0 absolute z-50 w-full flex justify-end px-2 py-3 bg-slate-900 shadow-md"
 >
   <a
+    *ngFor="let item of navItems"
     class="hover:underline"
+    [routerLink]="item.path"
     routerLinkActive="text-blue-500 underline"
-    routerLink="/pokemons"
-    >Pokémons</a
   >
-  <a
-    class="hover:underline"
-    routerLinkActive="text-blue-500 underline"
-    routerLink="/about"
-    >About</a
-  >
-  <a
-    class="hover:underline"
-    routerLinkActive="text-blue-500 underline"
-    routerLink="/pricing"
-    >Pricing</a
-  >
-  <a
-    class="hover:underline"
-    routerLinkActive="text-blue-500 underline"
-    routerLink="/contact"
-    >Contact</a
-  >
+    {{ item.label }}
+  </a>
 </nav>
