--- a/pokemon-ssr/src/app/pages/pokemons/pokemons-page.component.html
+++ b/pokemon-ssr/src/app/pages/pokemons/pokemons-page.component.html
@@ -1,23 +1,32 @@
 <h1 class="text-3xl">Listado de Pokémons</h1>
 <h2 class="text-xl">Página actual: {{ currentPage() }}</h2>
+
 <hr class="my-2" />
+
 @if( pokemons().length !== 0 ) {
 <pokemon-list [pokemons]="pokemons()" />
-} @else {<pokemon-list-skeleton />}
 
-<div class="flex justify-between items-center mt-4">
+} @else {
+
+<pokemon-list-skeleton />
+}
+
+<!-- TODO: Buttons Cargar siguiente y anteriores -->
+
+<div class="flex justify-between">
   <button
     [disabled]="currentPage() === 1"
     [routerLink]="['/pokemons/page', currentPage()! - 1]"
-    class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition"
+    class="mt-2"
   >
     Anteriores
   </button>
 
-  <button
-    [routerLink]="['/pokemons/page', currentPage()! + 1]"
-    class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700 transition"
-  >
+  <button [routerLink]="['/pokemons/page', currentPage()! + 1]" class="mt-2">
     Siguientes
   </button>
+
+  <!-- <button (click)="currentName.set('Otro Nombre')" class="mt-2">
+    {{ currentName() }}
+  </button> -->
 </div>
