--- a/pokemon-ssr/src/app/pokemons/components/pokemon-list/pokemon-list.component.html
+++ b/pokemon-ssr/src/app/pokemons/components/pokemon-list/pokemon-list.component.html
@@ -1,11 +1,15 @@
 <div class="grid gap-3 grid-cols-1 sm:grid-cols-3 md:grid-cols-5">
-  @if (pokemons().length > 0) { @for (pokemon of pokemons(); track pokemon.id) {
+  <!-- 12 -->
+  <!-- PokemonCard -->
+  @for( pokemon of pokemons(); track pokemon.id ) {
   <pokemon-card [pokemon]="pokemon" />
-  } } @else {
+
+  } @empty {
   <div
     class="col-span-5 text-center border-white h-28 flex justify-center items-center"
   >
     No hay pokémons
   </div>
+
   }
 </div>
