--- a/pokemon-ssr/src/styles.css
+++ b/pokemon-ssr/src/styles.css
@@ -1,7 +1,12 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 html,
 body {
-    background-color: #1e293b;
-    color: #ffffff;
+  @apply bg-slate-900 text-white;
+}
+
+button {
+  @apply bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 disabled:bg-slate-600 transition-all;
 }
