--- a/pokemon-ssr/src/app/pages/pokemons/pokemons-page.component.html
+++ b/pokemon-ssr/src/app/pages/pokemons/pokemons-page.component.html
@@ -1,32 +1,32 @@
-<h1 class="text-3xl">Listado de Pokémons</h1>
-<h2 class="text-xl">Página actual: {{ currentPage() }}</h2>
+<div class="container mx-auto">
+  <h1 class="text-4xl font-bold text-center mb-2">Listado de Pokémons</h1>
 
-<hr class="my-2" />
+  <hr class="my-4 border-gray-300" />
 
-@if( pokemons().length !== 0 ) {
-<pokemon-list [pokemons]="pokemons()" />
+  @if( pokemons().length !== 0 ) {
+  <pokemon-list [pokemons]="pokemons()" />
 
-} @else {
+  } @else {
 
-<pokemon-list-skeleton />
-}
+  <pokemon-list-skeleton />
+  }
 
-<!-- TODO: Buttons Cargar siguiente y anteriores -->
-
-<div class="flex justify-between">
-  <button
-    [disabled]="currentPage() === 1"
-    [routerLink]="['/pokemons/page', currentPage()! - 1]"
-    class="mt-2"
-  >
-    Anteriores
-  </button>
-
-  <button [routerLink]="['/pokemons/page', currentPage()! + 1]" class="mt-2">
-    Siguientes
-  </button>
-
-  <!-- <button (click)="currentName.set('Otro Nombre')" class="mt-2">
-    {{ currentName() }}
-  </button> -->
+  <div class="flex justify-between items-center my-6">
+    <button
+      [disabled]="currentPage() === 1"
+      [routerLink]="['/pokemons/page', currentPage()! - 1]"
+      class="px-4 py-2 bg-blue-500 text-white rounded-lg shadow-md hover:bg-blue-600 disabled:bg-gray-300 disabled:cursor-not-allowed"
+    >
+      ⬅️ Anteriores
+    </button>
+    <div class="text-lg text-gray-600 text-center">
+      Página actual: <span class="font-semibold">{{ currentPage() }}</span>
+    </div>
+    <button
+      [routerLink]="['/pokemons/page', currentPage()! + 1]"
+      class="px-4 py-2 bg-blue-500 text-white rounded-lg shadow-md hover:bg-blue-600"
+    >
+      Siguientes ➡️
+    </button>
+  </div>
 </div>
