feat: implement GitHub issues and labels fetching with error handling

--- a/github-issues-tanstack/src/app/modules/issues/pages/issues-list/issues-list-page.component.html
+++ b/github-issues-tanstack/src/app/modules/issues/pages/issues-list/issues-list-page.component.html
@@ -31,12 +31,13 @@
 
   <!-- Labels -->
   <div>
-    <!-- @if( labelsQuery.isLoading() ) {
+    @if( labelsQuery.isLoading() ) {
     <p>Estamos cargando</p>
     } @else {
-    <issues-labels-selector [labels]="labelsQuery.data() ?? []" />
-    } -->
+    <labels-selector [labels]="labelsQuery.data() ?? []" />
 
-    <!-- Todo: Label Selector -->
+    }
+
+    <!-- Todo: Label Selector-->
   </div>
 </section>
