--- a/github-issues-tanstack/src/app/modules/issues/components/labels-selector/labels-selector.component.html
+++ b/github-issues-tanstack/src/app/modules/issues/components/labels-selector/labels-selector.component.html
@@ -1,11 +1,15 @@
-<div class="flex flex-wrap justify-center items-center gap-2">
+<div class="flex flex-wrap justify-center items-center gap-2 p-2">
   @for (label of labels(); track label.id) {
   <div
-    class="border p2 rounded-md hover:bg-slate-950 p-1 cursor-pointer"
-    [ngStyle]="{ 'border-color': '#' + label.color }"
+    class="flex items-center rounded-full py-1 px-3 text-sm transition-all duration-200 cursor-pointer select-none"
+    [ngStyle]="{
+      'background-color': '#' + label.color + '20',
+      border: '1px solid #' + label.color
+    }"
+    role="checkbox"
+    [attr.title]="label.name"
   >
     {{ label.name }}
   </div>
-
   }
 </div>
