--- a/github-issues-tanstack/src/app/modules/issues/pages/issues-list/issues-list-page.component.html
+++ b/github-issues-tanstack/src/app/modules/issues/pages/issues-list/issues-list-page.component.html
@@ -14,30 +14,24 @@
   <!-- Listado -->
   <div class="mt-4 flex flex-col col-span-2">
     <!-- Todo: Listado de issues -->
-    <!-- @for (issue of issuesQuery.data(); track issue.id) {
+    @for (issue of issuesQuery.data(); track issue.id) {
 
     <issue-item [issue]="issue" />
 
     } @empty { @if( issuesQuery.isLoading() ) {
-    <p>Cargando issues</p>
+    <loader />
     } @else {
     <p>No hay issues que mostrar</p>
-    } } -->
-
-    <!-- Todo: Spinner -->
-
-    <!-- Todo: Si no hay issues por el filtro -->
+    } }
   </div>
 
   <!-- Labels -->
   <div>
     @if( labelsQuery.isLoading() ) {
-    <p>Estamos cargando</p>
+    <loader />
     } @else {
     <labels-selector [labels]="labelsQuery.data() ?? []" />
 
     }
-
-    <!-- Todo: Label Selector-->
   </div>
 </section>
