--- a/github-issues-tanstack/src/app/modules/issues/components/issue-item/issue-item.component.html
+++ b/github-issues-tanstack/src/app/modules/issues/components/issue-item/issue-item.component.html
@@ -1,37 +1,15 @@
 <div
-  class="flex flex-col md:flex-row items-center px-4 py-4 mb-5 border border-slate-700 rounded-lg bg-slate-700 hover:bg-slate-800 transition-colors shadow-md"
+  class="flex flex-col md:flex-row items-center px-3 py-4 mb-5 border border-slate-700 rounded-lg bg-slate-700 hover:bg-slate-800 transition-colors shadow-md"
 >
   <div class="flex-shrink-0 mr-3">
     @if( isOpen ) {
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 24 24"
-      width="24"
-      height="24"
-      class="text-green-500"
-    >
-      <path
-        fill="currentColor"
-        d="M3 4.5C3 3.12 4.12 2 5.5 2h4.75c.86 0 1.67.33 2.3.9L14.5 4.5h4c1.38 0 2.5 1.12 2.5 2.5v11c0 1.38-1.12 2.5-2.5 2.5h-13C4.12 20.5 3 19.38 3 18V4.5zm2 0v13.5c0 .28.22.5.5.5h13c.28 0 .5-.22.5-.5V7c0-.28-.22-.5-.5-.5h-4.75L11.3 5.1c-.42-.38-.97-.6-1.55-.6H5.5c-.28 0-.5.22-.5.5z"
-      ></path>
-    </svg>
+    <i class="fa-solid fa-folder-open text-green-500 text-2xl"></i>
     } @else {
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 24 24"
-      width="24"
-      height="24"
-      class="text-red-500"
-    >
-      <path
-        fill="currentColor"
-        d="M2 6.75C2 5.23 3.23 4 4.75 4h4.5c.57 0 1.08.17 1.5.44V6.5c0 1.38 1.12 2.5 2.5 2.5h4.75c.28 0 .5.22.5.5v7.75c0 1.52-1.23 2.75-2.75 2.75h-11c-1.52 0-2.75-1.23-2.75-2.75V6.75z"
-      ></path>
-    </svg>
+    <i class="fa-solid fa-folder-closed text-red-500 text-2xl"></i>
     }
   </div>
 
-  <div class="flex flex-col flex-grow px-2">
+  <div class="flex flex-col flex-grow px-1">
     <div class="flex items-center mb-1">
       <a
         [routerLink]="['/issue', issue().number]"
@@ -65,7 +43,7 @@
     </div>
   </div>
 
-  <div class="flex items-center space-x-4 mt-3 md:mt-0">
+  <div class="flex flex-col items-center gap-1">
     <img
       [src]="issue().user.avatar_url"
       width="40"
