--- a/github-issues-tanstack/src/app/modules/issues/components/issue-item/issue-item.component.html
+++ b/github-issues-tanstack/src/app/modules/issues/components/issue-item/issue-item.component.html
@@ -1,5 +1,6 @@
 <div
   class="flex flex-col md:flex-row items-center px-3 py-4 mb-5 border border-slate-700 rounded-lg bg-slate-700 hover:bg-slate-800 transition-colors shadow-md"
+  (mouseenter)="prefechIssueData()"
 >
   <div class="flex-shrink-0 mr-3">
     @if( isOpen ) {
