feat: implement state management for issue filtering and enhance UI with state buttons

--- a/github-issues-tanstack/src/app/modules/issues/pages/issues-list/issues-list-page.component.html
+++ b/github-issues-tanstack/src/app/modules/issues/pages/issues-list/issues-list-page.component.html
@@ -5,9 +5,27 @@
   <!-- Botones para controlar el Estado (State) -->
   <div class="flex flex-col col-span-3">
     <div class="flex gap-2">
-      <button class="btn active">All</button>
-      <button class="btn">Open</button>
-      <button class="btn">Closed</button>
+      <button
+        [class.active]="selectedState === 'all'"
+        class="btn"
+        (click)="onChangeState('all')"
+      >
+        All
+      </button>
+      <button
+        [class.active]="selectedState === 'open'"
+        class="btn"
+        (click)="onChangeState('open')"
+      >
+        Open
+      </button>
+      <button
+        [class.active]="selectedState === 'closed'"
+        class="btn"
+        (click)="onChangeState('closed')"
+      >
+        Closed
+      </button>
     </div>
   </div>
 
