Filtrar por estado y etiquetas

--- a/github-issues-tanstack/src/app/modules/issues/components/labels-selector/labels-selector.component.html
+++ b/github-issues-tanstack/src/app/modules/issues/components/labels-selector/labels-selector.component.html
@@ -8,6 +8,8 @@
     }"
     role="checkbox"
     [attr.title]="label.name"
+    (click)="onToggleLabel(label.name)"
+    [class.selected-label]="isSelected(label.name)"
   >
     {{ label.name }}
   </div>
