--- a/company-app/src/app/modules/shared/components/side-menu/side-menu.component.html
+++ b/company-app/src/app/modules/shared/components/side-menu/side-menu.component.html
@@ -4,7 +4,7 @@
   <div class="relative border-b border-white/20">
     <a class="flex items-center gap-4 py-6 px-8" href="#/">
       <h6
-        class="text-2xl font-bold block antialiased tracking-normal font-sans font-semibold leading-relaxed text-white"
+        class="text-2xl font-bold block antialiased tracking-normal font-sans leading-relaxed text-white"
       >
         <!-- Todo: personalizar colores -->
         <span class="text-blue-500">APX</span>
